# norlab_icp_mapper

./: .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  LICENSE  PERFORMANCE.md  README.md  mkdocs.yml  norlab_icp_mapperConfig.cmake.in  package.xml  register_single_scan.cpp  register_single_scan_dynamic_static_icps.cpp
docs/: Compilation.md  MapperConfiguration.md  MapperModuleDev.md  Python.md  RunningExample.md  UsingInRos.md  index.md  requirements.txt
examples/: BuildMapFromTrajectory.cpp  CMakeLists.txt  build_map_from_scans_and_trajectories.cpp  build_map_from_scans_and_trajectory.cpp  build_map_from_scans_and_trajectory.py  config.yaml  profile.cpp  requirements.txt
examples/config/: config.yaml  icp_config.yaml  input_filters.yaml  mapper_config.yaml  post_filters.yaml
examples/data/: icp_odom.csv
examples/data/scans/: cloud_1690309709_285305600.vtk  cloud_1690309709_385259008.vtk  cloud_1690309709_485205504.vtk  cloud_1690309709_585157888.vtk  cloud_1690309709_685139200.vtk  cloud_1690309709_785777664.vtk  cloud_1690309709_885748736.vtk  cloud_1690309709_985746176.vtk  cloud_1690309710_185535488.vtk  cloud_1690309710_285479936.vtk  cloud_1690309710_385434880.vtk  cloud_1690309710_485391104.vtk  cloud_1690309710_585328128.vtk  cloud_1690309710_85582848.vtk
norlab_icp_mapper/: CSVLogger.cpp  CSVLogger.h  CellInfo.cpp  CellInfo.h  CellManager.cpp  CellManager.h  FactorGraph.cpp  FactorGraph.h  HardDriveCellManager.cpp  HardDriveCellManager.h  ImuMeasurement.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  Mapper.cpp  Mapper.h  Mapper_dynamic_static.cpp  Mapper_dynamic_static.h  RAMCellManager.cpp  RAMCellManager.h  StampedState.h  State.h  Trajectory.cpp  Trajectory.h  utils.hpp
norlab_icp_mapper/MapperModules/: ComputeDynamicsMapperModule.cpp  ComputeDynamicsMapperModule.h  DynamicPointsMapperModule.cpp  DynamicPointsMapperModule.h  MapperModule.cpp  MapperModule.h  OctreeMapperModule.cpp  OctreeMapperModule.h  PointDistanceMapperModule.cpp  PointDistanceMapperModule.h  SymmetryMapperModule.cpp  SymmetryMapperModule.h  VoxelDownsamplingMapperModule.cpp  VoxelDownsamplingMapperModule.h
norlab_icp_mapper/MapperModules/utils/: OctreeGrid.cpp  OctreeGrid.h  node.h  node.hpp  octree.bak.h  octree.h  octree.hpp
params/: icp_config_cube_journal.yaml  input_filters_cube_journal.yaml  post_filters_cube_journal.yaml
python/: CMakeLists.txt  cell_manager.cpp  hard_drive_cell_manager.cpp  map.cpp  mapper.cpp  norlab_icp_mapper.cpp  norlab_icp_mapper_helper.h  pyproject.toml  ram_cell_manager.cpp  ram_cell_manager.h  trajectory.cpp  trajectory.h
python/src/: cell_manager.cpp  cell_manager.h  hard_drive_cell_manager.cpp  hard_drive_cell_manager.h  map.cpp  map.h  mapper.cpp  mapper.h  norlab_icp_mapper.cpp  norlab_icp_mapper_helper.h  ram_cell_manager.cpp  ram_cell_manager.h  trajectory.cpp  trajectory.h
python/src/mappermodules/: compute_dynamics.cpp  compute_dynamics.h  dynamic_points.cpp  dynamic_points.h  mapper_module.cpp  mapper_module.h  octree.cpp  octree.h  point_distance.cpp  point_distance.h
