[build-system]
requires = ["scikit-build-core>=0.9.8,<0.9.9"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.cmake = true
cmake.verbose = true

[project]
version = "2.1.0"
name = "norlab_icp_mapper"
dependencies = ["numpy>=1.20", "pypointmatcher>=1.4.3"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
